--- a/STAG.csproj
+++ b/STAG.csproj
@@ -28,7 +28,11 @@
   
   <ItemGroup>
     <Folder Include="Constants\" />
-    <Folder Include="NewFolder\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Helpers\" />
+    <Folder Include="Models\" />
+    <Folder Include="Views\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   
   <!-- For Windows only builds -->
