Added Font Awesome.Sharp Reference for the UI

--- a/STAG.csproj
+++ b/STAG.csproj
@@ -23,6 +23,8 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="FontAwesome" Version="4.7.0" />
+    <PackageReference Include="FontAwesome.Sharp" Version="6.6.0" />
     <PackageReference Include="RhinoCommon" Version="8.19.25132.1001" ExcludeAssets="runtime" />
     <PackageReference Include="RhinoWindows" Version="8.19.25132.1001" />
   </ItemGroup>
