--- a/STAG.csproj
+++ b/STAG.csproj
@@ -23,6 +23,16 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <None Remove="EmbeddedResources\STAG.png" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Include="EmbeddedResources\STAG.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="FontAwesome.Sharp" Version="6.6.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
